--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -3,16 +3,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-21 08:14-0400\n"
+"POT-Creation-Date: 2010-08-22 23:05+0200\n"
 "PO-Revision-Date: 2010-07-22 02:27+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: serbian_latin <sr@latin@li.org>\n"
+"Language: sr@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr@latin\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
@@ -185,7 +185,7 @@ msgstr "Komentari"
 #: pdf_schema.php:1342 prefs_manage.php:130 server_privileges.php:1564
 #: server_privileges.php:1575 server_privileges.php:1885
 #: server_privileges.php:1890 server_privileges.php:2183 sql.php:130
-#: sql.php:192 tbl_printview.php:226 tbl_structure.php:371
+#: sql.php:191 tbl_printview.php:226 tbl_structure.php:371
 #: tbl_tracking.php:331 tbl_tracking.php:336
 msgid "No"
 msgstr "Ne"
@@ -202,7 +202,7 @@ msgstr "Ne"
 #: libraries/user_preferences.lib.php:311 pdf_schema.php:1342
 #: prefs_manage.php:129 server_databases.php:75 server_privileges.php:1561
 #: server_privileges.php:1575 server_privileges.php:1885
-#: server_privileges.php:1888 server_privileges.php:2183 sql.php:191
+#: server_privileges.php:1888 server_privileges.php:2183 sql.php:190
 #: tbl_printview.php:226 tbl_structure.php:38 tbl_structure.php:371
 #: tbl_tracking.php:329 tbl_tracking.php:334
 msgid "Yes"
@@ -631,8 +631,8 @@ msgstr ""
 #: db_structure.php:405 libraries/display_tbl.lib.php:1902
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation%"
-"s."
+"This view has at least this number of rows. Please refer to %sdocumentation"
+"%s."
 msgstr ""
 
 #: db_structure.php:419 db_structure.php:433 libraries/header.inc.php:142
@@ -859,11 +859,11 @@ msgstr "Sadržaj baze je sačuvan u datoteku %s."
 #: import.php:58
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation%"
-"s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation"
+"%s for ways to workaround this limit."
 msgstr ""
-"Verovatno ste pokušali da uvezete preveliku datoteku. Molimo pogledajte %"
-"sdokumentaciju%s za načine prevazilaženja ovog ograničenja."
+"Verovatno ste pokušali da uvezete preveliku datoteku. Molimo pogledajte "
+"%sdokumentaciju%s za načine prevazilaženja ovog ograničenja."
 
 #: import.php:277 import.php:330 libraries/File.class.php:566
 #: libraries/File.class.php:676
@@ -903,7 +903,7 @@ msgstr "Obeleživač je upravo obrisan."
 msgid "Showing bookmark"
 msgstr "Prikazivanje markera"
 
-#: import.php:401 sql.php:623
+#: import.php:401 sql.php:621
 #, php-format
 msgid "Bookmark %s created"
 msgstr "Napravljen marker %s"
@@ -954,7 +954,7 @@ msgstr ""
 msgid "\"DROP DATABASE\" statements are disabled."
 msgstr "\"DROP DATABASE\" komanda je onemogućena."
 
-#: js/messages.php:30 libraries/mult_submits.inc.php:256 sql.php:186
+#: js/messages.php:30 libraries/mult_submits.inc.php:256 sql.php:185
 msgid "Do you really want to "
 msgstr "Da li stvarno hoćete da "
 
@@ -1583,8 +1583,8 @@ msgstr "Dobrodošli na %s"
 #: libraries/auth/config.auth.lib.php:106
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the %"
-"1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the "
+"%1$ssetup script%2$s to create one."
 msgstr ""
 "Verovatan razlog za ovo je da niste napravili konfiguracionu datoteku. "
 "Možete koristiti %1$sskript za instalaciju%2$s da biste je napravili."
@@ -4410,8 +4410,8 @@ msgstr "naziv tabele"
 #| "happen: %3$s. Other text will be kept as is."
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: %"
-"3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
+"formatting strings. Additionally the following transformations will happen: "
+"%3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
 msgstr ""
 "Ova vrednost se tumači korišćenjem %1$sstrftime%2$s, tako da možete da "
 "koristite stringove za formatiranje vremena. Takođe će se desiti i sledeće "
@@ -4723,7 +4723,7 @@ msgstr "Prikaz zapisa"
 msgid "total"
 msgstr "ukupno"
 
-#: libraries/display_tbl.lib.php:1928 sql.php:522
+#: libraries/display_tbl.lib.php:1928 sql.php:520
 #, php-format
 msgid "Query took %01.4f sec"
 msgstr "Upit je trajao %01.4f sekundi"
@@ -5464,7 +5464,7 @@ msgstr "SQL rezultat"
 msgid "Generated by"
 msgstr "Generisao"
 
-#: libraries/import.lib.php:151 sql.php:518 tbl_change.php:175
+#: libraries/import.lib.php:151 sql.php:516 tbl_change.php:175
 #: tbl_get_field.php:34
 msgid "MySQL returned an empty result set (i.e. zero rows)."
 msgstr "MySQL je vratio prazan rezultat (nula redova)."
@@ -6088,11 +6088,11 @@ msgstr "Izvrši SQL upit(e) na bazi %s"
 msgid "Columns"
 msgstr "Imena kolona"
 
-#: libraries/sql_query_form.lib.php:329 sql.php:662 sql.php:663 sql.php:680
+#: libraries/sql_query_form.lib.php:329 sql.php:660 sql.php:661 sql.php:678
 msgid "Bookmark this SQL query"
 msgstr "Zapamti SQL-upit"
 
-#: libraries/sql_query_form.lib.php:336 sql.php:674
+#: libraries/sql_query_form.lib.php:336 sql.php:672
 msgid "Let every user access this bookmark"
 msgstr "Dozvoli svakom korisniku da pristupa ovom upamćenom upitu"
 
@@ -7432,8 +7432,8 @@ msgstr "Odbaci baze koje se zovu isto kao korisnici."
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should %"
-"sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should "
+"%sreload the privileges%s before you continue."
 msgstr ""
 "Napomena: phpMyAdmin uzima privilegije korisnika direktno iz MySQL tabela "
 "privilegija. Sadržaj ove tabele može se razlikovati od privilegija koje "
@@ -8915,31 +8915,31 @@ msgstr ""
 msgid "Key should contain letters, numbers [em]and[/em] special characters"
 msgstr ""
 
-#: sql.php:494 tbl_replace.php:380
+#: sql.php:492 tbl_replace.php:380
 #, php-format
 msgid "Inserted row id: %1$d"
 msgstr ""
 
-#: sql.php:511
+#: sql.php:509
 msgid "Showing as PHP code"
 msgstr "Prikaz kao PHP kod"
 
-#: sql.php:514 tbl_replace.php:354
+#: sql.php:512 tbl_replace.php:354
 msgid "Showing SQL query"
 msgstr "Prikaz kao SQL upit"
 
-#: sql.php:516
+#: sql.php:514
 #, fuzzy
 #| msgid "Validate SQL"
 msgid "Validated SQL"
 msgstr "Proveri SQL"
 
-#: sql.php:636
+#: sql.php:634
 #, php-format
 msgid "Problems with indexes of table `%s`"
 msgstr "Problem pri indeksiranju tabele `%s`"
 
-#: sql.php:668
+#: sql.php:666
 msgid "Label"
 msgstr "Naziv"
 
